<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.anants.fragmentex.FirstFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"
                android:fontFamily="casual"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/height"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:fontFamily="casual"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/height_in_feet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:padding="10dp"
                        android:textColor="@android:color/holo_blue_dark"
                        android:fontFamily="casual" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="10dp"
                        android:textColor="@android:color/holo_blue_dark"
                        android:fontFamily="casual"
                        android:text="@string/feet" />

                    <EditText
                        android:id="@+id/height_in_inc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:padding="10dp"
                        android:textColor="@android:color/holo_blue_dark"
                        android:fontFamily="casual" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="10dp"
                        android:textColor="@android:color/holo_blue_dark"
                        android:fontFamily="casual"
                        android:text="@string/inc" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/weight"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_dark"
                    android:fontFamily="casual"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="numberDecimal"
                        android:padding="10dp"
                        android:textColor="@android:color/holo_blue_dark"
                        android:fontFamily="casual" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="10dp"
                        android:textColor="@android:color/holo_blue_dark"
                        android:fontFamily="casual"
                        android:text="@string/kilo" />
                </LinearLayout>

                <Button
                    android:id="@+id/calculate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:fontFamily="casual"
                    android:text="@string/cal"
                    android:textColor="@color/text1"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
